force-app/main/default/objects/OutboundCase__e/OutboundCase__e.object-meta.xml
<CustomObject>
    <label>Outbound Case</label>
    <pluralLabel>Outbound Cases</pluralLabel>
</CustomObject>