force-app/main/default/objects/OutboundCase__e/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>