force-app/main/default/objects/OutboundCase__e/fields/ExternalOwner__c.field-meta.xml
<CustomField>
    <fullName>ExternalOwner__c</fullName>
    <label>External Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>