force-app/main/default/objects/OutboundCase__e/fields/OwningOrganization__c.field-meta.xml
<CustomField>
    <fullName>OwningOrganization__c</fullName>
    <label>OwningOrganization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>