force-app/main/default/objects/OutboundCase__e/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>