force-app/main/default/objects/OutboundCase__e/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>Source Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>