force-app/main/default/objects/OutboundCase__e/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <label>Supplied Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>