force-app/main/default/objects/OutboundCase__e/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <label>Supplied Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>